[package]
authors = ["Aron Homberg <info@aron-homberg.de>"]
edition = "2021"
name    = "lightningimg-node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
gif = "0.13.1"
webp = "0.3.0"
rayon = "1.10.0"
image = "0.25.5"
chrono = "0.4"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
serde_derive = "1"
serde_json = "1"
indexmap = "2"
rustc-hash = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
