[package]
authors = ["Aron Homberg <info@aron-homberg.de>"]
edition = "2021"
name    = "lightningimg-node"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono       = "0.4"
futures      = "0.3"
gif          = "0.13.1"
image        = "0.25.5"
indexmap     = "2"
napi         = "2"
napi-derive  = "2"
rayon        = "1.10.0"
rustc-hash   = "2"
serde        = "1"
serde_bytes  = "0.11"
serde_derive = "1"
serde_json   = "1"
webp         = "0.3.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
